--- a/Nomenclatures.Web/Views/MatierePremiere/Edit.cshtml
+++ b/Nomenclatures.Web/Views/MatierePremiere/Edit.cshtml
@@ -10,6 +10,7 @@
     <div class="form-group">
         <label asp-for="Description"></label>
         <textarea class="form-control" asp-for="Description"></textarea>
+        <span asp-validation-for="Description"></span>
     </div>
     <div class="form-group">
         <label asp-for="PourcentageHumidite"></label>
